Fixed "Too much recursion", calendar validation
- Bug Fix: "Too much recursion". (submit form using Javascript instead
of jQuery to avoid "Too much recursion" error)
- Bug Fix: Corrected Bootstrap's show button loading text (upon
successfully validated click)
- Added 'readonly' to jQuery calendar input fields (to force correct
datetimes via widget use)
- Added custom white bgcolor to remove grey from 'readonly' of jQuery
calendar input fields
- Added jQuery validation to sheets_edit_one.php; sheet name and date
are required
- Corrected various other submit buttons to ensure their label text is
triggered upon click (i.e. "Saving...")
- Reinstalled git for windows application (missing dll file. really?!)

--- a/lti-signup-sheets/css/wms-custom.css
+++ b/lti-signup-sheets/css/wms-custom.css
@@ -298,6 +298,11 @@ span[data-cal-date] {
 	right: -12px;
 }
 
+.wms-custom-datepicker{
+	background-color: #ffffff !important;
+	border: 1px solid #A9A9A9 !important;;
+}
+
 /* classes for renderAsHtmlOpeningWithLimitedControls */
 .sus-add-me-to-opening {
 }
